# app/Models/User.php
@@ -5,6 +5,7 @@ namespace App\Models;
 use App\Enums\Roles;
 use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
@@ -62,5 +63,14 @@ class User extends Authenticatable
     public function wishlists()
     {
         return $this->belongsToMany(Product::class, UserWishlist::class);
+    }
+
+    public function nationality()
+    {
+        return $this->belongsTo(Country::class, 'nationality_id');
+    }
+    public function residence()
+    {
+        return $this->belongsTo(Country::class, 'residence_id');
     }
 }
